# sicha

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  nightly-fuzz.yml
bench/: bench.c
demo/: chat.c  fallback.c
fuzz/: fuzz_client.c  fuzz_request.c  fuzz_response.c  fuzz_sse.c
fuzz/corpus/client/: seed_min
fuzz/corpus/response/: seed_nonstream  seed_stream
fuzz/corpus/sse/: seed_bom_malformed  seed_crlf  seed_multiline  seed_openrouter
include/: sicha.h
src/: buf.c  cancel.c  classify.c  client.c  request.c  response.c  sicha_internal.h  sicha_thread.h  sse.c  status.c  transport_curl.c  transport_script.c
tests/: engine_helpers.h  http_server.c  http_server.h  support.c  support.h  test_backoff.c  test_buf.c  test_cancel.c  test_classify.c  test_curl.c  test_determinism.c  test_live.c  test_request.c  test_response.c  test_routing.c  test_script.c  test_sse.c  test_status.c  test_threads.c
xxt/: pty_demo.py
